cmake_minimum_required(VERSION 3.5)
project(questdb)

# Required for zstd's huf_decompress_amd64.S to be assembled. Without this,
# CMake silently drops the .S file from the build and the link fails at
# _HUF_decompress4X1_usingDTable_internal_fast_asm_loop etc. (The asmlib
# subdirectory enables ASM_NASM separately for Agner Fog's .asm files.)
enable_language(ASM)

include(ExternalProject)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_C_VISIBILITY_PRESET hidden)

# use this is for debug purposes
#set(CMAKE_VERBOSE_MAKEFILE ON)

# deal with windows slashes in JAVA_HOME
if ($ENV{JAVA_HOME})
    FILE(TO_CMAKE_PATH $ENV{JAVA_HOME} JAVA_HOME)
endif ($ENV{JAVA_HOME})

if (CMAKE_SYSTEM_PROCESSOR MATCHES "^arm64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "^aarch64")
    set(ARCH_AARCH64 1)
else ()
    set(ARCH_AMD64 1)
endif ()

if (APPLE)
    set(OS_DARWIN 1)
elseif (UNIX)
    if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
        set(OS_FREEBSD 1)
    elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
        set(OS_LINUX 1)
    endif ()
elseif (WIN32)
    set(OS_WINDOWS 1)
endif (APPLE)

set(
        SOURCE_FILES
        src/main/c/share/simd.h
        src/main/c/share/files.h
        src/main/c/share/net.h
        src/main/c/share/os.h
        src/main/c/share/glibc_compat.h
        src/main/c/share/ooo.cpp
        src/main/c/share/cpprt_overrides.h
        src/main/c/share/cpprt_overrides.cpp
        src/main/c/share/byte_sink.cpp
        src/main/c/share/byte_sink.h
        src/main/c/share/crc32c.c
)

# libzstd is included via a git submodule at src/main/c/share/zstd (pinned to
# upstream tag v1.5.7). Covers the client side of the QWP egress compression
# feature; the server-side compressor lives in the Rust qdbr crate and isn't
# linked into this library. Only the decompress-only subset of upstream is
# compiled -- the compress/ directory is left out entirely. zstd_jni.c is our
# JNI glue and lives alongside the submodule (not inside) so upstream resets
# don't disturb it.
if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/main/c/share/zstd/lib/zstd.h)
    message(FATAL_ERROR
        "libzstd submodule not initialised. Run:\n"
        "  git submodule update --init --recursive\n"
        "from java-questdb-client/.")
endif ()
set(
        ZSTD_FILES
        src/main/c/share/zstd_jni.c
        src/main/c/share/zstd/lib/common/debug.c
        src/main/c/share/zstd/lib/common/entropy_common.c
        src/main/c/share/zstd/lib/common/error_private.c
        src/main/c/share/zstd/lib/common/fse_decompress.c
        src/main/c/share/zstd/lib/common/pool.c
        src/main/c/share/zstd/lib/common/threading.c
        src/main/c/share/zstd/lib/common/xxhash.c
        src/main/c/share/zstd/lib/common/zstd_common.c
        src/main/c/share/zstd/lib/decompress/huf_decompress.c
        src/main/c/share/zstd/lib/decompress/zstd_ddict.c
        src/main/c/share/zstd/lib/decompress/zstd_decompress_block.c
        src/main/c/share/zstd/lib/decompress/zstd_decompress.c
)
# x86_64-only hand-tuned Huffman decoder; C fallback kicks in when
# ZSTD_DISABLE_ASM is set.
if (ARCH_AMD64 AND NOT WIN32)
    list(APPEND ZSTD_FILES src/main/c/share/zstd/lib/decompress/huf_decompress_amd64.S)
endif ()
list(APPEND SOURCE_FILES ${ZSTD_FILES})

# JNI includes
include_directories($ENV{JAVA_HOME}/include/)

# Current directory includes and build directory includes
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR})

if (OS_DARWIN)
    include_directories($ENV{JAVA_HOME}/include/darwin/)
    set(
            SOURCE_FILES ${SOURCE_FILES}
            src/main/c/osx/kqueue.c
            src/main/c/share/net.c
    )
elseif (OS_FREEBSD)
    MESSAGE("Building for FreeBSD")
    include_directories($ENV{JAVA_HOME}/include/freebsd/)
    set(
            SOURCE_FILES ${SOURCE_FILES}
            src/main/c/freebsd/kqueue.c
            src/main/c/share/net.c
    )
elseif (OS_LINUX)
    MESSAGE("Building for GNU/Linux")
    include_directories($ENV{JAVA_HOME}/include/linux/)
    set(
            SOURCE_FILES ${SOURCE_FILES}
            src/main/c/share/net.c
            src/main/c/linux/epoll.c
            src/main/c/linux/recvmmsg.c
    )
endif ()

if (OS_WINDOWS)
    include_directories($ENV{JAVA_HOME}/include/win32/)
    set(
            SOURCE_FILES ${SOURCE_FILES}
            src/main/c/windows/files.c
            src/main/c/windows/files.h
            src/main/c/windows/os.c
            src/main/c/windows/net.c
            src/main/c/windows/select.h
            src/main/c/windows/errno.h
            src/main/c/windows/select.c
            src/main/c/windows/timer.c
            src/main/c/windows/timer.h
    )
else ()
    set(
            SOURCE_FILES ${SOURCE_FILES}
            src/main/c/share/files.c
            src/main/c/share/os.c
    )
endif ()

set(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/target/classes/io/questdb/client/bin-local/)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT})

add_library(questdb SHARED ${SOURCE_FILES})

# libzstd public header is at zstd/lib/zstd.h; internal headers live under
# zstd/lib/common/. Both directories go on the include path so zstd_jni.c can
# use the short include "zstd.h" and the upstream .c files can find their own
# siblings without patching.
target_include_directories(questdb PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main/c/share/zstd/lib
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main/c/share/zstd/lib/common)

# Drop the zstd-internal hand-written amd64 assembly on platforms that can't
# assemble it; libzstd falls back to a C implementation when this is set.
if (NOT ARCH_AMD64 OR WIN32)
    target_compile_definitions(questdb PRIVATE ZSTD_DISABLE_ASM=1)
endif ()

set(COMMON_OPTIONS "-Wno-gnu-anonymous-struct;-Wno-nested-anon-types;-Wno-unused-parameter;-fPIC;-fno-rtti;-fno-exceptions")

set(DEBUG_OPTIONS "-Wall;-pedantic;-Wextra;-g;-O0")
set(RELEASE_OPTIONS "-O3")

list(APPEND DEBUG_OPTIONS "${COMMON_OPTIONS}")
list(APPEND RELEASE_OPTIONS "${COMMON_OPTIONS}")


if (ARCH_AARCH64)
    add_compile_definitions(__AARCH64__)

    ## on ARM64 we use vanilla arithmetic functions for now
    set(
            AARCH64_FILES
            src/main/c/share/ooo_dispatch_vanilla.cpp
    )

    add_library(questdb-aarch64 OBJECT ${AARCH64_FILES})
    target_compile_options(questdb-aarch64 PRIVATE "-fPIC"
            "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
            "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")

    target_link_libraries(
            questdb
            questdb-aarch64
    )

    target_compile_options(questdb PRIVATE
            "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
            "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")


else ()

    #assembler subroutines by Agner Fog
    set(ASMLIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/main/c/share/asmlib/)
    include(${ASMLIB_SOURCE_DIR}CMakeLists.txt)

    set(
        VCL_FILES
        src/main/c/share/ooo_dispatch.cpp
    )

    set(
        VCL_FILES_SSE2
        src/main/c/share/ooo_dispatch.cpp
        src/main/c/share/vcl/instrset_detect.cpp
    )

    #SSE2 lib
    add_library(questdb-sse2 OBJECT ${VCL_FILES_SSE2})

    #AVX512 lib
    add_library(questdb-avx512 OBJECT ${VCL_FILES})
    # A_memset, A_memcpy are faster on avx512 but slower on other CPU's on Linux
    target_compile_definitions(questdb-avx512 PRIVATE ENABLE_ASMLIB)
    target_compile_options(questdb-avx512 PRIVATE "-m64;-mavx512f;-fPIC;-mfma;-mavx512vl;-mavx512bw;-mavx512dq"
            "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
            "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")

    target_link_libraries(
            questdb-sse2
            questdb-avx512
    )

    if (WIN32)
        target_compile_options(questdb-sse2 PRIVATE "-m64;-march=core2;-msse2;-Wno-attributes"
                "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
                "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")
    else ()
        target_compile_options(questdb-sse2 PRIVATE "-m64;-march=core2;-msse2;-fPIC"
                "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
                "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")
    endif (WIN32)
    target_compile_options(questdb PRIVATE "-m64"
            "$<$<CONFIG:DEBUG>:${DEBUG_OPTIONS}>"
            "$<$<CONFIG:RELEASE>:${RELEASE_OPTIONS}>")

    ## Uncomment to measure time of ooo.cpp methods
    ## add_compile_definitions(OOO_CPP_PROFILE_TIMING)

    target_link_libraries(
            questdb
            questdb-sse2
            questdb-avx512
            asm
    )
endif (ARCH_AARCH64)

if (OS_WINDOWS)
    target_link_libraries(questdb wsock32 ws2_32 secur32 shlwapi psapi -s -static-libgcc -static-libstdc++)
    target_compile_options(questdb PRIVATE -fno-threadsafe-statics)
elseif (OS_DARWIN)
    target_link_libraries(questdb -nostdlib++ -dead_strip -lc++)
else ()
    target_compile_options(questdb PRIVATE -fno-threadsafe-statics -ffunction-sections -fdata-sections)
    target_link_libraries(questdb rt -Wl,--gc-sections -Wl,--exclude-libs=ALL -static-libgcc)
endif ()

# Define the secondary output directory

set(SECONDARY_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/questdb/client/bin-local/)
set(SECONDARY_OUTPUT2 ${CMAKE_CURRENT_SOURCE_DIR}/target/classes/io/questdb/client/bin-local/)

add_custom_command(TARGET questdb POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory ${SECONDARY_OUTPUT}
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${OUTPUT} ${SECONDARY_OUTPUT}
        COMMENT "Copying all build outputs from ${OUTPUT} to ${SECONDARY_OUTPUT}"
)

add_custom_command(TARGET questdb POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory ${SECONDARY_OUTPUT2}
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${OUTPUT} ${SECONDARY_OUTPUT2}
        COMMENT "Copying all build outputs from ${OUTPUT} to ${SECONDARY_OUTPUT2}"
)
